--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Crypto Signals Leaks</title>
 </head>
 
@@ -22,12 +22,11 @@
         <div class="container">
             <div class="navbar col-md-12 p-4">
                 <div class="col-md-4 col-sm-4 title d-flex justify-content-center">
-                    <img src="logo.png" alt="">
+                    <img src="images/logo.png" alt="">
                 </div>
             </div>
         </div>
     </div>
-
 
     <!-- content -->
 
