--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 <body>
 
     <!-- content -->
-    <div class="container">
+    <header>
         <div class="container">
             <div class="navbar col-md-12 p-4">
                 <div class="col-md-4 col-sm-4 title d-flex justify-content-center">
-                    <img src="images/logo.png" alt="">
+                    <img src="assets/images/logo.png" alt="">
                 </div>
             </div>
         </div>
-    </div>
-
+    <header>
     <!-- content -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
