--- a/index.html
+++ b/index.html
@@ -20,11 +20,26 @@
     <!-- content -->
     <header>
         <div class="container">
-            <div class="navbar col-md-12 p-4">
-                <div class="col-md-4 col-sm-4 title d-flex justify-content-center">
+            <div class="navbar col-md-12 pt-3">
+                <div class="col-md-5 col-sm-5 d-flex justify-content-left">
                     <img src="assets/images/logo.png" alt="">
                 </div>
+                <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
+                    <div class="col-md-2 navbar-text text-left">
+                        <h4>Home</h4>
+                    </div>
+                    <div class="col-md-2 navbar-text">
+                        <h4>About</h4>
+                    </div>
+                    <div class="col-md-2 navbar-text">
+                        <h4>Providers</h4>
+                    </div>
+                    <div class="col-md-3 navbar-text">
+                        <h4 style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                    </div>
+                </div>
             </div>
+
         </div>
     </header>
     
