shape added for tg

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
     </div>
 
 
-    
+    <div class="tg-shape">
+    <img src="" />
+    <div id="tg-shape-btn"></div>
+    </div>
+
     
     <!-- content -->
 
