telegram social logo added

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
 
     <div class="tg-shape">
-    <img src="" />
-    <div id="tg-shape-btn"></div>
+        <img id="telegram-image" src="assets/images/telegram.svg" />
+        <div id="tg-shape-btn"></div>
     </div>
 
     
