about page progrations

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
@@ -16,54 +17,99 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="navbar col-md-12 pt-3">
-                <div class="col-md-5 col-sm-5 d-flex justify-content-left">
-                    <img src="assets/images/logo.svg" alt="">
-                </div>
-                <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
-                    <div class="col-md-2 text-left">
-                        <a class="navbar-text" href="home.html">
-                            <h4>Home</h4>
-                        </a>
+    <div class="container">
+        <header>
+            <div class="col-md-12">
+                <div class="navbar pt-1 pb-1 col-md-12 pt-3">
+                    <div class="col-md-5 col-sm-5 d-flex justify-content-left">
+                        <img src="assets/images/logo.svg" alt="">
                     </div>
-                    <div class="col-md-2">
-                        <a class="navbar-text" href="about.html">
-                            <h4>About</h4>
-                        </a>
-                    </div>
-                    <div class="col-md-2">
-                        <a class="navbar-text" href="providers.html">
-                            <h4>Providers</h4>
-                        </a>
-                    </div>
-                    <div class="col-md-3">
-                        <h4 style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                    <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
+                        <div class="col-md-2 text-left">
+                            <a class="navbar-text" href="index.html">
+                                <h4>Home</h4>
+                            </a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="navbar-text" href="about.html">
+                                <h4>About</h4>
+                            </a>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="navbar-text text-center" href="providers.html">
+                                <h4>Providers</h4>
+                            </a>
+                        </div>
+                        <div class="col-md-4 text-end">
+                            <h4 style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                        </div>
                     </div>
                 </div>
             </div>
 
-        </div>
-    </header>
-    <!-- content -->
+        </header>
+        <!-- content -->
+        <main>
+            <h1 class="fw-bolder pt-5 pb-5 mt-5 mb-5" style="color: #FF00E5;">ABOUT</h1>
+            <div class="content col-md-10 pb-5">
+                <h4 class="fw-bolder pt-1 pb-1" style="color: #039BE5;">Biggest Crypto Signal Leaks Provider</h4>
+                <h5 class="fw-bolder pb-4 pt-3 text-light">We strongly believe in crypto and want our members to get a
+                    wide range of vetted
+                    experts and
+                    resources without having to be afraid of being scammed. We constantly monitor channel performance
+                    and continuously
+                    review new channels. Seeing multiple opinions is what truly makes you a more informed trader.
+                    Whether you are day
+                    trading, looking for quick scalps, long term holds, or small cap gems – Crypto Signal Leaks is the
+                    right place for
+                    you.
+                </h5>
+                <h5 class="fw-bolder pb-3 text-light">
+                    The best trading information in the world is collected in one place, when to buy, when to sell,
+                    crypto news and many
+                    other tips to help you earn, including a wide range of crypto training materials.On our server, You
+                    will receive all
+                    well-known premium crypto Signals. We have huge experience and a large user base, always trying to
+                    add more number of channels.
+                </h5>
 
+                <h4 class="fw-bolder pt-3 pb-2" style="color: #039BE5;">Our services include:</h4>
+                <h5 class="fw-bolder pt-1 pb-3 text-light">
+                    • Automated Signal Trading Bot<br>
+                    • Premium Reports<br>
+                    • Premium educational material<br>
+                    • Insider Information<br>
+                    • Thousands of Dollars worth premium leaked signals in real time<br>
+                    • 24*7 Support and assistance</h5>
+            </div>
+            <div class="second-content pt-5">
+                <h1 class="fw-bolder mt-4" style="color: #FFFF;">
+                    Why You Should Join
+                </h1>
+                <h1 class="fw-bolder" style="color: #FF00E5;">
+                    CRYPTO SIGNAL LEAKS?
+                </h1>
+            </div>
+        </main>
+        <!-- content  -->
 
-    <footer class="footer">
-        <div class="container">
-            <div class="navbar col-md-12">
-                <div class="col-md-4 col-sm-5 d-flex justify-content-left">
-                    <img src="assets/images/logo.svg" alt="">
-                </div>
-                <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-center">
-                    <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
-                </div>
-                <div class="col-md-3 col-sm-7 mt-1 d-flex justify-content-end">
-                    <h6>POLITICA DE<br> PRIVACIDADE</h6>
+        <footer class="footer">
+            <div class="container">
+                <div class="navbar col-md-12">
+                    <div class="col-md-4 col-sm-5 d-flex justify-content-left">
+                        <img src="assets/images/logo.svg" alt="">
+                    </div>
+                    <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-center">
+                        <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
+                    </div>
+                    <div class="col-md-3 col-sm-7 mt-1 d-flex justify-content-end">
+                        <h6>POLITICA DE<br> PRIVACIDADE</h6>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
