first section tg image issue fixed in css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
     <section class="container">
 
-        <div class="row">
+        <div class="row col-md-12">
+
             <div class="col-xs-6 col-md-6">
                 <span style="color: #FFFFFF">Want to make </span>
                 <span style="color: #FF00E5">700%+ profit this month</span>
@@ -66,10 +67,11 @@
                 </div>
             </div>
 
-            <div class="col">
-                <img id="telegram-image" src="assets/images/telegram.svg" />
-                <div id="tg-shape-btn"></div>
+
+            <div class="row col-md-4" id="tg-shape-btn">
+                <img class="tg-img-svg"  src="assets/images/telegram.svg" />
             </div>
+            
 
         </div>
 
