--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <section class="container">
+    <section class="container-fluid">
 
         <div class="row col-md-12">
 
@@ -330,32 +330,41 @@
         </div>
 
         <div class="row">
-
-
             <div class="col-xs-12 col-md-12">
-                <h4 style="text-align: center; color:#FFFFFF">You can get these results every day</h4>
-
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="assets/images/sli1.jpg" alt="First slide">
+                <div class="col-md-12 text-center">
+                    <h3 class="text-content-heading p-5 fw-bolder">
+                        You can get these results every day
+                    </h3>
+                </div>
+                <div class="col-md-12 pt-3 d-flex justify-content-center">
+                    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="..." alt="Second slide">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active" data-bs-interval="3000">
+                            <img src="assets/images/sli1.jpg" class="d-block w-100" alt="...">
+                            
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="assets/images/sli2.jpg" class="d-block w-100" alt="...">
+                            
+                          </div>
+                          <div class="carousel-item" data-bs-interval="3000">
+                            <img src="assets/images/sli3.jpg" class="d-block w-100" alt="...">
+                          </div>
                         </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="..." alt="Third slide">
-                        </div>
-                    </div>
-
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
 
                 <div id="big-tg-shape-btn">
