--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
                     <div class="col-md-2 text-left">
-                        <a class="navbar-text" href="home.html">
+                        <a class="navbar-text" href="index.html">
                             <h4>Home</h4>
                         </a>
                     </div>
@@ -52,7 +52,7 @@
         </div>
     </header>
 
-    <section class="container-fluid">
+    <div class="container-fluid">
 
         <div class="row col-md-12">
 
@@ -62,8 +62,10 @@
             </div>
 
             <div class="col-xs-12 col-md-6">
-                <div>
-                    <h3>images</h3>
+                <div class="first-right-side">
+                    <img id="background-gradient-img" src="assets/images/background-gradient.svg" alt="">
+                    <img id="background-img" src="assets/images/bg-1.svg" alt="">
+                    
                 </div>
             </div>
 
@@ -370,12 +372,12 @@
                 <div id="big-tg-shape-btn">
                     <div id="tg-text-image-merge">
                         <img id="tg-shape-img" src="assets/images/tgVector.svg" alt="">
-                        <h6 id="tg-text">join our telegram</h6>
+                        <h6 id="tg-text">Join Our Free Telegram</h6>
                     </div>
                 </div>
             </div>
 
-    </section>
+        </div>
 
 
     <!-- content -->
