style tgbar updated

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
 
-                    <div class="row m-lg-5" id="tg-shape-btn">
+                    <div style="bottom: -300px;" class="row m-lg-5" id="tg-shape-btn">
                         <h5 style="color:#FFFFFF" class="mt-1 text-center"><b>JOIN</b></h5>
                         <img class="tg-img-svg"  src="assets/images/telegram.svg" />
                     </div>
