--- a/providers.html
+++ b/providers.html
@@ -11,63 +11,75 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/providers.css">
     <title>Crypto Signals Leaks</title>
 </head>
 
 <body>
-    <header>
-        <div class="container">
-            <div class="navbar col-md-12 pt-3">
-                <div class="col-md-5 col-sm-5 d-flex justify-content-left">
-                    <img src="assets/images/logo.svg" alt="">
+    <div class="container providersbody">
+        <div class="col-sm-12 col-md-11">
+            <header>
+                <div class="col-md-12">
+                    <div class="navbar pb-1 col-md-12 pt-3 d-flex justify-content-center">
+                        <div class="col-md-6 col-sm-5 d-flex justify-content-left">
+                            <img src="assets/images/logo.svg" alt="">
+                        </div>
+                        <div class="col-md-6 col-sm-7 title mt-1 d-flex justify-content-between">
+                            <div class="col-md-2 text-left">
+                                <a class="navbar-text" href="index.html">
+                                    <h4>Home</h4>
+                                </a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="navbar-text" href="about.html">
+                                    <h4>About</h4>
+                                </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a class="navbar-text text-center" href="providers.html">
+                                    <h4>Providers</h4>
+                                </a>
+                            </div>
+                            <div class="col-md-5 text-end">
+                                <h4 class="fw-bolder" style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
-                    <div class="col-md-2 text-left">
-                        <a class="navbar-text" href="home.html">
-                            <h4>Home</h4>
-                        </a>
-                    </div>
-                    <div class="col-md-2">
-                        <a class="navbar-text" href="about.html">
-                            <h4>About</h4>
-                        </a>
-                    </div>
-                    <div class="col-md-2">
-                        <a class="navbar-text" href="providers.html">
-                            <h4>Providers</h4>
-                        </a>
-                    </div>
-                    <div class="col-md-3">
-                        <h4 style="color: #FF00E5;">SUBSCRIPTIONS</h4>
-                    </div>
-                </div>
+
+            </header>
+
+            <!-- content -->
+            <div class="col-md-12 pb-5">
+            <div class="pt-5"></div>
+            <h1 class="main-title  pt-5 pb-1 mt-5 mb-5">Premium Crypto Providers</h1>
+            <div class="col-md-12 d-flex justify-content-center">
+                <img class="col-md-12" src="assets/images/LEAK Image 1.svg" alt="" srcset="">
             </div>
-
-        </div>
-    </header>
-
-    <!-- content -->
-
-
-
-
-
-    <footer class="footer">
-        <div class="container">
-            <div class="navbar col-md-12">
-                <div class="col-md-4 col-sm-5 d-flex justify-content-left">
-                    <img src="assets/images/logo.svg" alt="">
-                </div>
-                <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-center">
-                    <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
-                </div>
-                <div class="col-md-3 col-sm-7 mt-1 d-flex justify-content-end">
-                    <h6>POLITICA DE<br> PRIVACIDADE</h6>
-                </div>
             </div>
+            <!-- content -->
+
+
+            <footer class="pb-5 mt-5 mb-5 pt-5">
+                <div class="">
+                    <div class="navbar col-md-12">
+                        <div class="col-md-5 col-sm-5 d-flex justify-content-left">
+                            <img src="assets/images/logo.svg" alt="">
+                        </div>
+                        <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-left">
+                            <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
+                        </div>
+                        <div class="col-md-2 col-sm-7 mt-1 d-flex justify-content-end">
+                            <h6>POLITICA DE<br> PRIVACIDADE</h6>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
-    </footer>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
