--- a/about.html
+++ b/about.html
@@ -99,8 +99,8 @@
                             • 24*7 Support and assistance</h5>
                     </div>
                 </div>
-                
-                <div class="second-content">                   
+
+                <div class="second-content">
                     <div class="pt-5 pb-5">
                         <h1 class="main-title mt-4" style="font-size: 47px;color: #FFFF;">
                             Why You Should Join
@@ -122,18 +122,17 @@
                                 </h5>
                         </div>
                         <div class="col-md-4 row">
-                            <div class="col-md-1">
-                            </div>
-                            <div class="col-md-11">
-                            <div class="pb-1">
-                                <img src="assets/images/support 1.svg" alt="" srcset="">
-                            </div>
-                            <h3 class="text-content-heading fw-bolder pt-5 pb-2">Discussion & Support<br> Channel</h4>
-                                <h5 class="col-md-11 text-content pt-1 pb-3 text-light">
-                                    In addition to our signal channels, we have a dedicated
-                                    discussion and support chat where our members can talk 
-                                    to each other and we provide 24/7 support.
-                                </h5>
+                            <div class="col-md-12">
+                                <div class="pb-1">
+                                    <img src="assets/images/support 1.svg" alt="" srcset="">
+                                </div>
+                                <h3 class="text-content-heading fw-bolder pt-5 pb-2">Discussion & Support Channel
+                                    </h4>
+                                    <h5 class="col-md-11 text-content pt-1 pb-3 text-light">
+                                        In addition to our signal channels, we have a dedicated
+                                        discussion and support chat where our members can talk
+                                        to each other and we provide 24/7 support.
+                                    </h5>
                             </div>
                         </div>
                         <div class="col-md-4 row">
@@ -148,12 +147,12 @@
                                         We receive crypto signals on our dedicated server in
                                         real time and deliver them to you via our telegram
                                         in less than 2 seconds.
-                                </h5>
+                                    </h5>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
             </main>
             <!-- content  -->
 
