--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
 
 
                 <div style="bottom: -300px;" class="row m-lg-5" id="tg-shape-btn">
-                    <h5 style="color:#FFFFFF" class="mt-1 text-center"><b>JOIN</b></h5>
+
+                    <a href="https://telegram.me/Crypto_Signal_Leaks">
+                        <h5 style="color:#FFFFFF" class="mt-1 text-center"><b>JOIN</b></h5>
+                    </a>
                     <img class="tg-img-svg" src="assets/images/telegram.svg" />
+
                 </div>
 
 
@@ -207,11 +211,13 @@
 
                         </ol>
 
-                        <div class="subscribtion-getstarted">
+                        <a class="subscribtion-getstarted"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
                             <div style="width:180px" id="tg-shape-btn">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
-                        </div>
+                        </a>
+
 
                     </div>
 
@@ -266,11 +272,12 @@
 
                         </ol>
 
-                        <div class="subscribtion-getstarted">
+                        <a class="subscribtion-getstarted"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
                             <div style="width:180px" id="tg-shape-btn">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
-                        </div>
+                        </a>
 
                     </div>
 
@@ -325,11 +332,12 @@
 
                         </ol>
 
-                        <div class="subscribtion-getstarted">
+                        <a class="subscribtion-getstarted"
+                            href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
                             <div style="width:180px" id="tg-shape-btn">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
-                        </div>
+                        </a>
 
                     </div>
 
@@ -386,12 +394,15 @@
                     </div>
                 </div>
 
-                <div id="big-tg-shape-btn">
-                    <div id="tg-text-image-merge">
-                        <img id="tg-shape-img" src="assets/images/tgVector.svg" alt="">
-                        <h6 id="tg-text">Join Our Free Telegram</h6>
+                <a href="https://telegram.me/Crypto_Signal_Leaks">
+                    <div id="big-tg-shape-btn">
+                        <div id="tg-text-image-merge">
+                            <img id="tg-shape-img" src="assets/images/tgVector.svg" alt="">
+                            <h6 id="tg-text">Join Our Free Telegram</h6>
+                        </div>
                     </div>
-                </div>
+                </a>
+
             </div>
 
         </div>
@@ -415,7 +426,7 @@
         </footer>
 
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
