mobile image added to homepage

--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
                             <h4>Providers</h4>
                         </a>
                     </div>
+
                     <div class="col-md-3">
                         <a href="#subscription-section">
-                            <h4 style="color: #FF00E5;">SUBSCRIPTIONS</h4>
+                            <h4 class="fw-bolder" style="color: #FF00E5;">SUBSCRIPTIONS</h4>
                         </a>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -80,16 +82,13 @@
 
                 </div>
 
-
-
-
             </div>
 
-            <div class="col-xs-12 col-md-6">
-                <div class="first-right-side">
-
-                    <img id="background-img" src="assets/images/bg-1.svg" alt="">
-                    <img id="background-gradient-img" src="assets/images/background-gradient.svg" alt="">
+            <div class="col-xs-12 col-md-6 row">
+                <div class="first-right-side row">
+                    <img class="row" id="background-img" src="assets/images/bg-1.svg" alt="">
+                    <img class="row" id="background-gradient-img" src="assets/images/background-gradient.svg" alt="">
+                    <img class="row" style="position: relative;bottom: 6em;width: 82%;" src="assets/images/mobile.png" alt="">
 
                 </div>
             </div>
@@ -158,12 +157,12 @@
         </div>
 
         <div id="subscription-section" class="row third-row">
-
             <h2 style="color: #FFFFFF;">SUBSCRIPTIONS</h2>
+            
+            <div class="row pt-5 pb-4">
 
-            <div class="pt-5 pb-4 row">
+                <div class="row col-md-4 ">
 
-                <div class="col-md-4 row">
                     <div class="col-md-1">
                     </div>
 
