--- a/providers.html
+++ b/providers.html
@@ -42,9 +42,6 @@
                                     <h4>Providers</h4>
                                 </a>
                             </div>
-                            <div class="col-md-5 text-end">
-                                <h4 class="fw-bolder" style="color: #FF00E5;">SUBSCRIPTIONS</h4>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -54,9 +51,9 @@
             <!-- content -->
             <div class="col-md-12 pb-5">
             <div class="pt-5"></div>
-            <h1 class="main-title  pt-5 pb-1 mt-5 mb-5">Premium Crypto Providers</h1>
-            <div class="col-md-12 d-flex justify-content-center">
-                <img class="col-md-12" src="assets/images/LEAK Image 1.svg" alt="" srcset="">
+            <h1 class="fw-bolder pt-5 pb-1 mb-5" style="color: #FF00E5;">Premium Crypto Providers</h1>
+            <div class="col-md-12 row justify-content-center">
+                <img class="col-md-12" width="100%" src="assets/images/LEAK Image 1.svg" alt="" srcset="">
             </div>
             </div>
             <!-- content -->
