mobile view updates

--- a/about.html
+++ b/about.html
@@ -18,25 +18,26 @@
 
 <body>
     <div class="container aboutbody">
-        <div class="col-sm-12 col-md-11">
+        <div class="col-md-11">
             <header>
                 <div class="col-md-12">
-                    <div class="navbar pt-1 pb-1 col-md-12 pt-3">
-                        <div class="col-md-5 col-sm-5 d-flex justify-content-left">
-                            <img src="assets/images/logo.svg" alt="">
+                    <div class="navbar pb-1 col-12 pt-3 d-flex justify-content-center">
+                        <div class="col-md-6 d-flex justify-content-left">
+                            <img class="logoimage" src="assets/images/logo.svg" alt="">
                         </div>
-                        <div class="col-md-7 col-sm-7 title mt-1 d-flex justify-content-between">
-                            <div class="col-md-2 text-left">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5 title mt-1 d-flex justify-content-between">
+                            <div class="col-md-2 p-2 text-left">
                                 <a class="navbar-text" href="index.html">
                                     <h4>Home</h4>
                                 </a>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-2 p-2">
                                 <a class="navbar-text" href="about.html">
                                     <h4>About</h4>
                                 </a>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-3 p-2">
                                 <a class="navbar-text text-center" href="providers.html">
                                     <h4>Providers</h4>
                                 </a>
@@ -106,9 +107,9 @@
                             CRYPTO SIGNAL LEAKS?
                         </h1>
                     </div>
-                    <div class="pt-5 pb-4 d-flex justify-content-between">
-                        <div class="col-md-4">
-                            <div class="pb-1">
+                    <div class="pt-5 pb-4 row justify-content-between">
+                        <div class="col-md-4 col-xs-12">
+                            <div class="pb-1 ">
                                 <img src="assets/images/telegram.svg" alt="" srcset="">
                             </div>
                             <h3 class="text-content-heading fw-bolder pt-5 pb-2">140+ Premium Crypto Leaks Channels</h4>
@@ -118,7 +119,7 @@
                                     margin trading and altcoins.
                                 </h5>
                         </div>
-                        <div class="col-md-4 row">
+                        <div class="col-md-4 col-xs-12 row">
                             <div class="col-md-12">
                                 <div class="pb-1">
                                     <img src="assets/images/support 1.svg" alt="" srcset="">
@@ -132,10 +133,10 @@
                                     </h5>
                             </div>
                         </div>
-                        <div class="col-md-4 row">
+                        <div class="col-md-4 col-xs-12 row">
                             <div class="col-md-2">
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-md-10 ">
                                 <div>
                                     <img src="assets/images/flash-sale 1.svg" alt="" srcset="">
                                 </div>
@@ -153,22 +154,20 @@
             </main>
             <!-- content  -->
 
-            <footer class="pb-5 pt-5">
-                <div class="">
-                    <div class="navbar col-md-12">
-                        <div class="col-md-5 col-sm-5 d-flex justify-content-left">
-                            <img src="assets/images/logo.svg" alt="">
-                        </div>
-                        <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-left">
-                            <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
-                        </div>
-                        <div class="col-md-2 col-sm-7 mt-1 d-flex justify-content-end">
-                            <h6>POLITICA DE<br> PRIVACIDADE</h6>
-                        </div>
+            <footer class="pb-2 mt-5 mb-5 pt-5">
+                <div class="footer col-12 row">
+                    <div class="col-md-5">
+                        <img class="logoimage" src="assets/images/logo.svg" alt="">
+                    </div>
+                    <div class="col-md-5 col-sm-7 mt-5">
+                        <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
+                    </div>
+                    <div class="footer-text col-md-2 col-sm-7 mt-5">
+                        <h6>POLITICA DE<br> PRIVACIDADE</h6>
                     </div>
                 </div>
             </footer>
-            
+
         </div>
     </div>
 
