--- a/providers.html
+++ b/providers.html
@@ -19,25 +19,26 @@
 
 <body>
     <div class="container providersbody">
-        <div class="col-sm-12 col-md-11">
+        <div class="col-md-11">
             <header>
                 <div class="col-md-12">
-                    <div class="navbar pb-1 col-md-12 pt-3 d-flex justify-content-center">
-                        <div class="col-md-6 col-sm-5 d-flex justify-content-left">
-                            <img src="assets/images/logo.svg" alt="">
+                    <div class="navbar pb-1 col-12 pt-3 d-flex justify-content-center">
+                        <div class="col-md-6 d-flex justify-content-left">
+                            <img class="logoimage" src="assets/images/logo.svg" alt="">
                         </div>
-                        <div class="col-md-6 col-sm-7 title mt-1 d-flex justify-content-between">
-                            <div class="col-md-2 text-left">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-5 title mt-1 d-flex justify-content-between">
+                            <div class="col-md-2 p-2 text-left">
                                 <a class="navbar-text" href="index.html">
                                     <h4>Home</h4>
                                 </a>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-2 p-2">
                                 <a class="navbar-text" href="about.html">
                                     <h4>About</h4>
                                 </a>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-3 p-2">
                                 <a class="navbar-text text-center" href="providers.html">
                                     <h4>Providers</h4>
                                 </a>
@@ -59,20 +60,18 @@
             <!-- content -->
 
 
-            <footer class="pb-5 mt-5 mb-5 pt-5">
-                <div class="">
-                    <div class="navbar col-md-12">
-                        <div class="col-md-5 col-sm-5 d-flex justify-content-left">
-                            <img src="assets/images/logo.svg" alt="">
+            <footer class="pb-2 mt-5 mb-5 pt-5">
+                    <div class="footer col-12 row">
+                        <div class="col-md-5">
+                            <img class="logoimage" src="assets/images/logo.svg" alt="">
                         </div>
-                        <div class="col-md-5 col-sm-7 mt-1 d-flex justify-content-left">
+                        <div class="col-md-5 col-sm-7 mt-5">
                             <h6>© 2022 CRYPTOCARTEL.CO ALL TIGHTS RESERVED</h6>
                         </div>
-                        <div class="col-md-2 col-sm-7 mt-1 d-flex justify-content-end">
+                        <div class="footer-text col-md-2 col-sm-7 mt-5">
                             <h6>POLITICA DE<br> PRIVACIDADE</h6>
                         </div>
                     </div>
-                </div>
             </footer>
         </div>
     </div>
