added mediaquery fixed some css bugs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
 
 
-                <div style="bottom: -300px;" class="row m-lg-5" id="tg-shape-btn">
+                <div style="z-index: 10; bottom: -300px;" class="row col-md-6 m-lg-5" id="tg-shape-btn">
 
                     <a href="https://telegram.me/Crypto_Signal_Leaks">
                         <h5 style="color:#FFFFFF" class="mt-1 text-center"><b>JOIN</b></h5>
@@ -88,10 +88,11 @@
                 <div class="first-right-side row">
                     <img class="row" id="background-img" src="assets/images/bg-1.svg" alt="">
                     <img class="row" id="background-gradient-img" src="assets/images/background-gradient.svg" alt="">
-                    <img class="row" style="position: relative;bottom: 6em;width: 82%;" src="assets/images/mobile.png" alt="">
+                    <img class="row" id="background-img-mobile"  src="assets/images/mobile.png" alt="">
 
                 </div>
             </div>
+            
         </div>
 
         <div class="row second-row">
@@ -159,14 +160,14 @@
         <div id="subscription-section" class="row third-row">
             <h2 style="color: #FFFFFF;">SUBSCRIPTIONS</h2>
             
-            <div class="row pt-5 pb-4">
+            <div style="margin-left: 20px;" class="row">
 
                 <div class="row col-md-4 ">
 
                     <div class="col-md-1">
                     </div>
 
-                    <div class="row col-md-11 subscription-card">
+                    <div class="row col-md-11 mb-2 subscription-card">
                         <ol class="subscription-card-text-description" style="list-style-type: none;">
 
                             <div class="subscription-card-text">
@@ -212,7 +213,7 @@
 
                         <a class="subscribtion-getstarted"
                             href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
-                            <div style="width:180px" id="tg-shape-btn">
+                            <div style="width:180px" class="tg-shape-btn-subscribtion">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
                         </a>
@@ -227,7 +228,7 @@
                     <div class="col-md-1">
                     </div>
 
-                    <div class="row col-md-11 subscription-card">
+                    <div class="row col-md-11 mb-2 subscription-card">
                         <ol class="subscription-card-text-description" style="list-style-type: none;">
 
                             <div class="subscription-card-text">
@@ -273,7 +274,7 @@
 
                         <a class="subscribtion-getstarted"
                             href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
-                            <div style="width:180px" id="tg-shape-btn">
+                            <div style="width:180px" class="tg-shape-btn-subscribtion">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
                         </a>
@@ -287,7 +288,7 @@
                     <div class="col-md-1">
                     </div>
 
-                    <div class="row col-md-11 subscription-card">
+                    <div class="row col-md-11 mb-2 subscription-card ">
                         <ol class="subscription-card-text-description" style="list-style-type: none;">
 
                             <div class="subscription-card-text">
@@ -333,7 +334,7 @@
 
                         <a class="subscribtion-getstarted"
                             href="https://docs.google.com/forms/d/e/1FAIpQLSeE2Dzyt7iEWveLlpjlNnVss4zOVh6IOW7YptW8Bp5vuGAQ7A/viewform">
-                            <div style="width:180px" id="tg-shape-btn">
+                            <div style="width:180px" class="tg-shape-btn-subscribtion">
                                 <h4 class="text-center" style="color: #FFFFFF">Get Started</h4>
                             </div>
                         </a>
@@ -409,7 +410,7 @@
 
         <!-- content -->
         <footer class="pb-5 pt-5">
-            <div class="">
+            <div class="row">
                 <div class="navbar col-md-12">
                     <div class="col-md-5 col-sm-5 d-flex justify-content-left">
                         <img src="assets/images/logo.svg" alt="">
